# badge

./: .gitignore  README.md  flake.nix
pkgs/nixbadge/: default.nix
src/: CMakeLists.txt  build.zig  partitions.csv  sdkconfig.defaults
src/cmake/: zig-build.cmake
src/lib/: esp-idf.zig
src/lib/esp-idf/: drivers.zig  sys.zig  wifi.zig
src/lib/esp-idf/drivers/: gpio.zig
src/main/: CMakeLists.txt  Kconfig.projbuild  app.zig  idf_component.yml  led_strip_encoder.c  nixbadge.c  nixbadge.zig  nixbadge_gpio.h  nixbadge_http.c  nixbadge_http.h  nixbadge_leds.c  nixbadge_leds.h  nixbadge_mesh.c  nixbadge_mesh.h  nixbadge_utils.c  nixbadge_utils.h  proto.zig  utils.zig
src/main/nixbadge/: RingBuffer.zig  leds.zig  mesh.zig
src/scripts/: flash_nvs.sh  gen_nvs.sh
